# ICU-Guardian

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py  icu_environment.py  requirements.txt  simulator.py  tasks.py
server/static/: index.html
