[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "icu-guardian"
version = "1.0.0"
description = "ICU patient monitoring OpenEnv environment for training AI clinical agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "openai>=1.0",
]
server = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
]

[tool.setuptools.packages.find]
include = ["icu_guardian*", "server*"]
